modification de fenetre principal arraylist

--- a/Pojet_Onitama_Nouveau/src/pojet_onitama_nouveau/Fenetre_Principale.form
+++ b/Pojet_Onitama_Nouveau/src/pojet_onitama_nouveau/Fenetre_Principale.form
@@ -163,6 +163,9 @@
       </SubComponents>
     </Container>
     <Component class="javax.swing.JButton" name="Bcartecote">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BcartecoteActionPerformed"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JPanel" name="PanneauInfoJR">
       <Properties>
